@@ -34,7 +34,6 @@
 
 package com.kitfox.svg.app.data;
 
-import com.kitfox.svg.SVGConst;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
@@ -43,6 +42,10 @@ import java.net.URLConnection;
 import java.net.URLStreamHandler;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+
+import org.geogebra.common.util.Base64;
+
+import com.kitfox.svg.SVGConst;
 
 /**
  *
@@ -69,7 +72,7 @@ public class Handler extends URLStreamHandler
                 content = content.substring(7);
                 try
                 {
-                    buf = new sun.misc.BASE64Decoder().decodeBuffer(content);
+					buf = Base64.decode(content);
                 }
                 catch (IOException e)
                 {
